# genetic_local_planner

./: .gitignore  CLAUDE.md  CPP_IMPLEMENTATION_STATUS.md  LICENSE  README.md  SETUP_STATUS.md  docker-compose.yml  environment.yml
.devcontainer/: README.md  devcontainer.json
.devcontainer/ros1/: devcontainer.json
.devcontainer/ros2/: devcontainer.json
docker/: README.md
docker/ros1/: Dockerfile  build.sh  remove.sh  run.sh  stop.sh
docker/ros2/: Dockerfile  build.sh  remove.sh  run.sh  stop.sh
docs/: development_plan.md  training_plan.md
docs/learn/: README.md
docs/learn/00-prerequisites/: README.md
docs/learn/00-prerequisites/exercises/: warmup.py
docs/learn/00-prerequisites/exercises/solutions/: warmup_solution.py
docs/learn/01-project-architecture/: README.md
docs/learn/02-genetic-algorithms/: README.md
docs/learn/03-neural-networks/: README.md
docs/learn/04-onnx-deployment/: README.md
docs/learn/05-cpp-integration/: README.md
docs/learn/06-ros-fundamentals/: README.md
docs/learn/07-docker-containers/: README.md
docs/learn/08-training-pipeline/: README.md
docs/learn/09-capstone/: README.md
docs/operational/: README.md  building.md  configuration.md  deployment.md  docker.md  setup.md  training.md  troubleshooting.md
samples/configs/: costmap_common.yaml  planner_params_ros1.yaml  planner_params_ros2.yaml
samples/worlds/: simple_corridor.world
src/plan_ga_planner/include/plan_ga_planner/: collision_checker.h  costmap_processor.h  onnx_inference.h  planner_core.h  trajectory_generator.h  types.h
src/plan_ga_planner/src/: collision_checker.cpp  costmap_processor.cpp  onnx_inference.cpp  planner_core.cpp  trajectory_generator.cpp
src/plan_ga_ros1/: CMakeLists.txt  package.xml  plan_ga_plugin.xml
src/plan_ga_ros1/include/plan_ga_ros1/: plan_ga_ros1_plugin.h
src/plan_ga_ros1/src/: plan_ga_ros1_plugin.cpp
src/plan_ga_ros2/: CMakeLists.txt  package.xml  plan_ga_plugin.xml
src/plan_ga_ros2/include/plan_ga_ros2/: plan_ga_ros2_plugin.hpp
src/plan_ga_ros2/src/: plan_ga_ros2_plugin.cpp
training/: FUTURE_WORK.md  GA_FUTURE_WORK.md  VISUALIZATION_GUIDE.md  __init__.py  train_ga.py  train_nn.py
training/config/: ga_config.yaml  nn_config.yaml
training/ga/: __init__.py  chromosome.py  evolution.py  fitness.py  operators.py
training/neural_network/: __init__.py  dataset.py  model.py
training/simulator/: __init__.py  collision_checker.py  costmap.py  environment.py  robot_model.py
training/visualization/: __init__.py  color_utils.py  costmap_renderer.py  pygame_visualizer.py  stats_panel_renderer.py  trajectory_renderer.py
