<?xml version="1.0"?>
<package format="2">
  <name>plan_ga_ros1</name>
  <version>0.1.0</version>
  <description>GA-based local planner plugin for ROS1 Noetic</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies -->
  <depend>roscpp</depend>
  <depend>nav_core</depend>
  <depend>costmap_2d</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>

  <export>
    <nav_core plugin="${prefix}/plan_ga_plugin.xml" />
  </export>
</package>
