<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plan_ga_ros2</name>
  <version>0.1.0</version>
  <description>GA-based local planner plugin for ROS2 Humble using Nav2</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <!-- Nav2 dependencies -->
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>

  <!-- Message dependencies -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- TF2 dependencies -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Plugin library -->
  <depend>pluginlib</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/plan_ga_plugin.xml" />
  </export>
</package>
